force-app/main/default/objects/Account/fields/Account_Score1__c.field-meta.xml
<CustomField>
    <fullName>Account_Score1__c</fullName>
    <label>Account.Score1</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>