force-app/main/default/objects/Account/fields/Account_Score2__c.field-meta.xml
<CustomField>
    <fullName>Account_Score2__c</fullName>
    <label>Account.Score2</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>