force-app/main/default/objects/Account/fields/Change_Industry__c.field-meta.xml
<CustomField>
    <fullName>Change_Industry__c</fullName>
    <label>Change_Industry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>