force-app/main/default/objects/Account/fields/Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Child_Object__c</fullName>
    <label>Child Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Oppurtunity</fullName>
            </value>
            <value>
                <fullName>Cases</fullName>
            </value>
            <value>
                <fullName>Assets</fullName>
            </value>
            <value>
                <fullName>Orders</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>