force-app/main/default/objects/Account/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>