force-app/main/default/objects/Account/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <label>Engagement Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>