force-app/main/default/objects/Account/fields/Escalated_Cases_Count__c.field-meta.xml
<CustomField>
    <fullName>Escalated_Cases_Count__c</fullName>
    <label>Escalated Cases Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>