force-app/main/default/objects/Account/fields/Family_Count__c.field-meta.xml
<CustomField>
    <fullName>Family_Count__c</fullName>
    <label>Family Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>