force-app/main/default/objects/Account/fields/Inactive_Since__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Since__c</fullName>
    <label>Inactive Since</label>
    <type>Date</type>
</CustomField>