force-app/main/default/objects/Account/fields/Last_Closed_Deal_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Closed_Deal_Date__c</fullName>
    <label>Last Closed Deal Date</label>
    <type>Date</type>
</CustomField>