force-app/main/default/objects/Account/fields/Last_Deal_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Deal_Date__c</fullName>
    <label>Last Deal Date</label>
    <type>Date</type>
</CustomField>