force-app/main/default/objects/Account/fields/Maintenance_Status__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Status__c</fullName>
    <label>Maintenance_Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>