force-app/main/default/objects/Account/fields/Text_Message__c.field-meta.xml
<CustomField>
    <fullName>Text_Message__c</fullName>
    <formula>IF (Discount__c &gt; 30, &quot;Manager Approval&quot;, &quot;Discount Applied&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Text Message</label>
    <type>Text</type>
</CustomField>