force-app/main/default/objects/Account/fields/Total_Revenues__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenues__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Revenue</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>