force-app/main/default/objects/Account/fields/VPA__c.field-meta.xml
<CustomField>
    <fullName>VPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VPA</label>
    <type>Checkbox</type>
</CustomField>