force-app/main/default/objects/Account/validationRules/Account_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
  ISPICKVAL (PRIORVALUE (Type), &quot;Customer - Direct&quot;),
  ISPICKVAL (Type, &quot;Prospect&quot;)
)</errorConditionFormula>
    <errorMessage>Cannot be changed</errorMessage>
</ValidationRule>